--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
 <body>
     <div id="app">
         <main>
-            <h1>L'email generate sono:</h1>
-            <ul>
-                <li v-for="(email, index) in emailsArray">{{email}}</li>
-            </ul>
+            <div class="container">
+                <h1>L'email generate:</h1>
+                <ul>
+                    <li v-for="(email, index) in emailsArray">{{index}} - {{email}}</li>
+                </ul>
+            </div>
         </main>
 
     </div>
